@@ -8,9 +8,9 @@ Java-based implementation of the OMG SysML-Modelica Transformation (SyM) using M
 
 By Axel Reichwein, February 22, 2016
 
-Overview: There are two usage modes to run the bidirectional SysML-Modelica transformations: **user mode** and **debugger mode**. 
-- user mode allows to open MagicDraw and run the bidirectional SysML-Modelica transformations. 
-- debugger mode allows to launch MagicDraw and run the transformations by seeing the single steps of the transformation in the source code. The debugger mode is helpful to understand, extend and debug the source code.
+Overview: There are two usage modes to run the bidirectional SysML-Modelica transformations: **user mode** and **developer mode**. 
+- User mode allows to open MagicDraw and run the bidirectional SysML-Modelica transformations. 
+- Developer mode allows to launch MagicDraw and run the MagicDraw plugins from the Eclipse IDE. This is helpful to review, debug, and extend the source code of the MagicDraw plugins.
 
 Requirements: 
 •	SysML-Modelica Transformation May-31-2012.zip 
@@ -27,21 +27,29 @@ Requirements:
 
 ###User Mode
 
-1.	Unzip the org.gt.mbse.mdsysml2modelica.zip and org.gt.mbse.modelica2mdsysml.zip files. Place the unzipped folders in the plugins folder of your MagicDraw installation directory (e.g. C:\Program Files\MagicDraw UML\plugins).
-2.	Launch the MagicDraw application. Disable plugin "Caliber Integration" if available through Options->Environment->Plugins. Otherwise, there will be a problem with the Corba connection that OMC needs to set up. Restart MagicDraw after disabling the "Caliber Integration" plugin.
-3.	Next it is necessary to import the SysML4Modelica profile as a module within a new and empty MagicDraw SysML project. Download  [ModelicaImportTest.mdzip](/edu.gatech.mbse.mdsysml2modelica/MagicDraw%20Projects/ModelicaImportTest.mdzip). Click on Raw to download the file.
-4.	Also download the associated SysML4Modelica profile. Download  [sysml4modelicaprofile.mdzip](/edu.gatech.mbse.mdsysml2modelica/MagicDraw%20Projects/sysml4modelicaprofile.mdzip). Click on Raw to download the file. 
-5.	2 Options
+#### Launching MagicDraw with Modelica plugins 
+
+1. Unzip the org.gt.mbse.mdsysml2modelica.zip and org.gt.mbse.modelica2mdsysml.zip files. Place the unzipped folders in the plugins folder of your MagicDraw installation directory (e.g. C:\Program Files\MagicDraw UML\plugins).
+2. Launch the MagicDraw application. 
+	
+#### Importing Modelica models into MagicDraw SysML 
+
+3. Download  [ModelicaImportTest.mdzip](/edu.gatech.mbse.mdsysml2modelica/MagicDraw%20Projects/ModelicaImportTest.mdzip). Click on Raw to download the file.
+4. Also download the associated SysML4Modelica profile. Download  [sysml4modelicaprofile.mdzip](/edu.gatech.mbse.mdsysml2modelica/MagicDraw%20Projects/sysml4modelicaprofile.mdzip). Click on Raw to download the file. 
+5. 2 Options to import Modelica models into SysML
 	1. Option A: Place the sysml4modelicaprofile.mdzip file in the same folder as the ModelicaImportTest.mdzip file. This is necessary as the ModelicaImportTest model refers to the sysml4modelicaprofile profile. Open the empty ModelicaImportTest.mdzip model. 
 	2. Option B: Create a new SysML project in MagicDraw with File->New Project-> Create SysML project. Click on the Options menu. Select “use Module”. Choose the SysML4Modelica profile. Click Next. In the field “Module Packages”, the SysML4Modelica package should be displayed. If yes, make sure that it is marked and click on “Finish”. This new empty SysML project with the SysML4Modelica profile as module should be saved. It can then be reused on future occasions as a MagicDraw project that is ready to directly import a Modelica model.
 6. You are now ready to import a Modelica model into the MagicDraw SysML project. Go on Data (right click)->Modelica to SysML->Import Modelica. Select the Modelica .mo file. Sample Modelica files such as TwoTankExample.mo, InverseModel.mo and fullRobot.mo can be found [here](/edu.gatech.mbse.mdsysml2modelica/Modelica%20models)
 7. After having imported a Modelica model into SysML, it is possible to automatically create the IBD. Select the Modelica class which contains connectors and then Right mouse->New Diagram->SysML Internal Block Diagram and then choose your favorite layout. Some manual refactoring will most likely still be necessary to make it look nice
-8. **After having imported a Modelica model into SysML, or once a SysML4Modelica model is available in MagicDraw, it can be exported into Modelica**. Select “Data” or a Modelica package that should be exported and right click and select SysML to Modelica->Generate Modelica. The generated Modelica model will be located in the MagicDraw installation directory and be named “generated_Modelica.mo”. If the generated Modelica model is not visible in the MagicDraw installation directory, it couldn’t be created because of user rights. Make sure to launch MagicDraw with administrator rights. 
+
+#### Exporting MagicDraw SysML models into  Modelica
+
+**After having imported a Modelica model into SysML, or once a SysML4Modelica model is available in MagicDraw, it can be exported into Modelica**. Select “Data” or a Modelica package that should be exported and right click and select SysML to Modelica->Generate Modelica. The generated Modelica model will be located in the MagicDraw installation directory and be named “generated_Modelica.mo”. If the generated Modelica model is not visible in the MagicDraw installation directory, it couldn’t be created because of user rights. Make sure to launch MagicDraw with administrator rights. 
 
 
 
 
-###Debugger mode 
+###Developer mode 
 
 The code of the MagicDraw plugin for the bidirectional SysML-Modelica transformation is within an Eclipse java project. A Java launch configuration will launch Magicdraw with the SysML-> Modelica and Modelica->SysML transformation plugins. All steps of the transformation can then be followed in the debug perspective of the Eclipse environment. 
 
@@ -92,18 +100,10 @@ C:\\Users\\Axel\\git\\edu.gatech.mbse.mdsysmlmodelica-feb19-2016
 &quot;"/>
 ```
 
+### 6.	Running MagicDraw with Modelica plugins 
 
- 
-
-6.	In the Eclipse environment, go to the Run->Run Configurations… menu. Select the “Java Application” tab and then the “New Launch Configuration” button at the top left with the icon displaying a blank sheet and a plus sign in the corner. Give a unique name to the launch configuration like “RunMagicDraw” at the top. Select as “Main Class” the Java class RunMagicDraw in the edu.gatech.mbse.mdsysmlmodelica.magicdraw package. Next, go to the “Arguments” tab and add in the “VM Arguments” field the following arguments: 
-
--Xmx1000M -XX:PermSize=40M -XX:MaxPermSize=300M -Duser.language\=en -DLOCALCONFIG\=false
-
-Otherwise, MagicDraw won’t be able to start with enough memory and will crash.
- 	   		  
-7.	Run the launch configuration. MagicDraw will start as if a user had started it manually. Disable plugin "Caliber Integration" if available through Options->Environment->Plugins. Otherwise, there will be a problem with the Corba connection that OMC needs to set up.
- 
-8.	Next it is necessary to import the SysML4Modelica profile as a module within a new and empty MagicDraw SysML project. The SysML4Modelica profile is located in the org.gt.mbse.mdsysmlmodelica project under \MagicDraw Projects. It can be copied into a more appropriate folder like the \Documents\MagicDraw Projects folder.
+1. Select the *mdsysmlmodelica.launch* launch configuration (Run -> Run Configurations… and select in the Java application category the launch configuration named *mdsysmlmodelica.launch*) and click Run. 
+2. Next it is necessary to import the SysML4Modelica profile as a module within a new and empty MagicDraw SysML project. The SysML4Modelica profile is located in the org.gt.mbse.mdsysmlmodelica project under \MagicDraw Projects. It can be copied into a more appropriate folder like the \Documents\MagicDraw Projects folder.
 
 
 9.	Create a new SysML project in MagicDraw (if possible with MagicDraw 17.0) with File->New Project-> Create SysML project. Click on the Options menu. Select “use Module”. Choose the SysML4Modelica profile. Click Next. In the field “Module Packages”, the SysML4Modelica package should be displayed. If yes, make sure that it is marked and click on “Finish”. This new empty SysML project with the SysML4Modelica profile as module should be saved. It can then be reused on future occasions as a MagicDraw project that is ready to directly import a Modelica model.
